# mem-fs

./: .gitignore  CLAUDE.md  Cargo.toml  FUSE_PLAN.md  Makefile  PLAN.md  README.md  install.sh  memfs-init.sh  setup.sh  uninstall.sh
.github/workflows/: release.yml
src/: db.rs  embeddings.rs  engine.rs  format.rs  fuse.rs  lib.rs  main.rs  path.rs  queries.rs  settings.rs  state.rs  util.rs
tests/: test_fuse_agent.sh  test_fuse_write.sh  test_integration.sh  test_sync_merge.sh
tests/lib/: fuse_mount.sh
