[package]
name = "memfs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
fuser = "0.14"
libc = "0.2"
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"] }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokenizers = "0.21"
tokio = { version = "1", features = ["full"] }
turso = { version = "0.4", features = ["sync"] }
