[package]
name = "memfs"
version = "0.7.0"
edition = "2021"

[features]
default = ["search"]
search = ["dep:ndarray", "dep:ort", "dep:tokenizers", "dep:rusqlite"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
fuser = "0.14"
libc = "0.2"
ndarray = { version = "0.17", optional = true }
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"], optional = true }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
tokenizers = { version = "0.21", optional = true }
tokio = { version = "1", features = ["full"] }
turso = { version = "0.4", features = ["sync"] }

[[bin]]
name = "search"
path = "src/bin/search.rs"
required-features = ["search"]
